<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VerApp</string>

    <!-- Menu options -->
    <string name="menu_reset">Reset</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="title_frequency_logging">Frequency logging</string>
    <string name="frequencyLog">Logging frequency</string>

    <!-- Buttons -->
    <string name="start_button">Start</string>
    <string name="start_again_button">Resume</string>
    <string name="stop_button">Stop</string>
    <string name="incident_button">Incident</string>

    <!-- TextViews -->
    <string name="avgSpeed_init">Avg Speed: 0.0 km/h</string>
    <string name="speed_init">0.0 km/h</string>
    <string name="latestlaps">Latest Lap Times</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="logo_desc">App logo</string>
    <string name="title_activity_run">RunActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="nothingToDisplay">-</string>

    <!-- Settings -->
    <string name="pref_freq">frequency</string>
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

</resources>