<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/stop"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:background="@drawable/red_button"
        android:text="@string/stop_button" />

    <Button
        android:id="@+id/start_when_paused"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/clockTime"
        android:background="@drawable/green_button"
        android:text="@string/start_again_button" />

    <Button
        android:id="@+id/incident"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/yellow_button"
        android:text="@string/incident_button" />

    <TextView
        android:id="@+id/lapTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSpeed"
        android:layout_centerHorizontal="true"
        android:text="@string/latestlaps"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/lapTime2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lapTime3"
        android:layout_below="@+id/lapTime"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/incident"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/speed_init"
        android:textColor="#000000"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/lapTime3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lapTime2"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Chronometer
        android:id="@+id/clockTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/stop"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:textColor="#000000"
        android:textSize="35sp" />

</RelativeLayout>